--- a/Project/Client/Views/User/UploadProduct.cshtml
+++ b/Project/Client/Views/User/UploadProduct.cshtml
@@ -25,22 +25,22 @@
 
 <h4 class="container mt-3 container-custom bg-success text-white p-3 align-content-center">Create a new project</h4>
 
-@* @if (TempData["success"] != null)
+@if (TempData["success"] != null)
 {
-        <div class="alert alert-success">
+    <div class="alert alert-success">
         @TempData["success"]
-        </div>
+    </div>
 }
 
 @if (TempData["error"] != null)
 {
-        <div class="alert alert-danger">
+    <div class="alert alert-danger">
         @TempData["error"]
-        </div>
-} *@
+    </div>
+}
 
 <div class="container container-custom px-5">
-    <form asp-action="UploadProductPost" asp-controller="User" class="row mt-2" enctype="multipart/form-data">
+    <form asp-action="UploadProductPost" asp-controller="User" method="post" class="row mt-2" enctype="multipart/form-data">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <!-- Phần bên trái chứa các input chính -->
@@ -86,8 +86,8 @@
                 <button type="button" class="btn btn-danger" onclick="document.getElementById('fileInput').click()">Upload</button>
                 <span asp-validation-for="@Model.gameFile" class="m-2">File size limit: 1 GB</span>
             </div>
-            @*             <!-- Game File (Upload game file) -->
-            <div class="form-group">
+            <!-- Game File (Upload game file) -->
+            @*   <div class="form-group">
             <label class="control-label" asp-for="@Model.gameFile">Upload Game File</label>
             <input type="file" name="gameFile" multiple class="form-control" asp-for="@Model.gameFile" />
             <span asp-validation-for="@Model.gameFile" class="text-danger"></span>
@@ -105,15 +105,18 @@
                     <div class="form-group">
                         <label class="form-label fw-bold fs-6">Category</label>
                         <div id="category-container">
-                            <select class="form-select category-select mb-2">
-                                @if (Model.Categories != null)
+                            @if (Model.Categories.Count != 0)
+                            {
+                                @for (int i = 0; i < Model.Categories.Count; i++)
                                 {
-                                    @foreach (string cate in Model.Categories)
-                                    {
-                                        <option value="@cate">@cate</option>
-                                    }
+                                    <select class="form-select category-select mb-2" asp-for="@Model.Categories[i]">
+                                        @foreach (string cate in ViewBag.Categories)
+                                        {
+                                            <option value="@cate">@cate</option>
+                                        }
+                                    </select>
                                 }
-                            </select>
+                            }
                         </div>
                         <span asp-validation-for="@Model.Categories" class="text-danger"></span>
                         <div>
@@ -136,7 +139,7 @@
                 </div>
 
                 <div class="mb-2">
-                    <label asp-validation-for="@Model.Platform" class="form-label fw-bold fs-6">Platform</label>
+                    <label class="form-label fw-bold fs-6">Platform</label>
                     <select class="form-select">
                         <option value="0">Unknown</option>
                         <option value="1">Downloadable</option>
@@ -156,36 +159,35 @@
 
         <!-- Phần bên phải cho hình ảnh cover -->
         <div class="col-md-4">
-            @*             <div class="text-center">
-            <!-- Hình ảnh hiển thị -->
-            <img id="coverImagePreview" src="~/Image/avatar.jpeg" alt="Cover Image" class="border mb-3" style="width:200px; height:200px;" />
-            <!-- Input file ẩn -->
-            <input type="file" name="coverImage" class="d-none" id="coverImageInput" accept="image/*" />
-
-            <!-- Nút để kích hoạt chọn file -->
-            <button type="button" class="btn btn-outline-dark mt-2 w-100" onclick="document.getElementById('coverImageInput').click()">Upload Cover Image</button>
-            </div> *@
-            <!-- ImageFiles (Upload multiple images) -->
-            @*             <div class="mt-3">
-            <div class="form-group">
-            <label class="form-label fw-bold fs-6">Image</label>
-            <div id="image-container">
-            <input type="file" multiple class="form-control mb-2" />
+            <div class="text-center">
+                <!-- Hình ảnh hiển thị -->
+                <img id="coverImagePreview" src="~/Image/avatar.jpeg" alt="Cover Image" class="border mb-3" style="width:200px; height:200px;" />
+                <!-- Input file ẩn -->
+                <input type="file"  class="d-none" asp-for="imageFiles" id="coverImageInput" accept="image/*" />
+                <!-- Nút để kích hoạt chọn file -->
+                <button type="button" class="btn btn-outline-dark mt-2 w-100" onclick="document.getElementById('coverImageInput').click()">Upload Cover Image</button>
             </div>
+            <!-- ImageFiles (Upload multiple images) -->
+            <div class="mt-3">
+                <div class="form-group">
+                    <label class="form-label fw-bold fs-6">Image</label>
+                    <div id="image-container">
+                        <input type="file" multiple class="form-control mb-2" />
+                    </div>
+                    <span class="text-danger"></span>
+                    <div>
+                        <a href="javascript:void(0)" id="add-image" class="m-2"><i class="fa-solid fa-plus"></i></a>
+                        <a href="javascript:void(0)" id="remove-image" class="m-2"><i class="fa-solid fa-minus"></i></a>
+                    </div>
+                    <small class="form-text text-muted">You can add multiple images by clicking the "+" button.</small>
+                </div>
+            </div>
+            <!-- ImageFiles (Upload multiple images) -->
+            @*             <div class="form-group">
+            <label class="control-label">Upload Images</label>
+            <input type="file" class="form-control" />
             <span class="text-danger"></span>
-            <div>
-            <a href="javascript:void(0)" id="add-image" class="m-2"><i class="fa-solid fa-plus"></i></a>
-            <a href="javascript:void(0)" id="remove-image" class="m-2"><i class="fa-solid fa-minus"></i></a>
-            </div>
-            <small class="form-text text-muted">You can add multiple images by clicking the "+" button.</small>
-            </div>
             </div> *@
-            <!-- ImageFiles (Upload multiple images) -->
-            <div class="form-group">
-                <label class="control-label">Upload Images</label>
-                <input type="file" class="form-control" />
-                <span class="text-danger"></span>
-            </div>
         </div>
 
         <!-- Nút tạo sản phẩm -->
@@ -197,103 +199,104 @@
 </div>
 
 <script type="text/javascript">
-    // // Sự kiện khi nhấn vào nút "+" để thêm select mới
-    // document.getElementById('add-category').addEventListener('click', function () {
-    //     // Lấy select đầu tiên hiện có để clone
-    //     var selectElement = document.querySelector('.category-select');
+    // Sự kiện khi nhấn vào nút "+" để thêm select mới
+    document.getElementById('add-category').addEventListener('click', function () {
+            // Lấy select đầu tiên hiện có để clone
+        var selectElement = document.querySelector('.category-select');
 
-    //     // Tạo bản sao của select hiện tại
-    //     var newSelect = selectElement.cloneNode(true);  // True để sao chép cả các option
+            // Tạo bản sao của select hiện tại
+        var newSelect = selectElement.cloneNode(true);  // True để sao chép cả các option
 
-    //     // Đặt lại giá trị mặc định
-    //     newSelect.selectedIndex = 0;
+        // Đặt lại giá trị mặc định
+        newSelect.selectedIndex = 0;
 
-    //     // Thêm select mới vào container
-    //     var container = document.getElementById('category-container');
-    //     container.appendChild(newSelect);
-    // });
+        // Thêm select mới vào container
+        var container = document.getElementById('category-container');
+        container.appendChild(newSelect);
+    });
 
-    // // Sự kiện khi nhấn vào nút "-" để xóa select cuối cùng
-    // document.getElementById('remove-category').addEventListener('click', function () {
-    //     var container = document.getElementById('category-container');
-    //     var selects = container.getElementsByTagName('select');
+    // Sự kiện khi nhấn vào nút "-" để xóa select cuối cùng
+    document.getElementById('remove-category').addEventListener('click', function () {
+        var container = document.getElementById('category-container');
+        var selects = container.getElementsByTagName('select');
 
-    //     // Chỉ xóa nếu còn nhiều hơn 1 select
-    //     if (selects.length > 1) {
-    //         container.removeChild(selects[selects.length - 1]);
-    //     }
-    // });
+            // Chỉ xóa nếu còn nhiều hơn 1 select
+        if (selects.length > 1) {
+            container.removeChild(selects[selects.length - 1]);
+        }
+    });
 
-    // // Sự kiện khi nhấn vào nút "+" để thêm ô input mới
-    // document.getElementById('add-image').addEventListener('click', function () {
-    //     // Tạo phần tử input file mới
-    //     var newInput = document.createElement('input');
-    //     newInput.type = 'file';
-    //     newInput.name = 'imageFiles[]';  // Để name là dạng mảng để có thể upload nhiều file
-    //     newInput.multiple = true;  // Cho phép chọn nhiều file cùng lúc
-    //     newInput.classList.add('form-control', 'mb-2');  // Thêm class để form đẹp hơn
+    // Sự kiện khi nhấn vào nút "+" để thêm ô input mới
+    document.getElementById('add-image').addEventListener('click', function () {
+        // Tạo phần tử input file mới
+            var newInput = document.createElement('input');
+        newInput.type = 'file';
+        newInput.name = 'imageFiles[]';  // Để name là dạng mảng để có thể upload nhiều file
+        newInput.multiple = true;  // Cho phép chọn nhiều file cùng lúc
+        newInput.classList.add('form-control', 'mb-2');  // Thêm class để form đẹp hơn
 
-    //     // Thêm input file mới vào container
-    //     var container = document.getElementById('image-container');
-    //     container.appendChild(newInput);
-    // });
+        // Thêm input file mới vào container
+        var container = document.getElementById('image-container');
+        container.appendChild(newInput);
+    });
 
-    // // Sự kiện khi nhấn vào nút "-" để xóa ô input cuối cùng
-    // document.getElementById('remove-image').addEventListener('click', function () {
-    //     var container = document.getElementById('image-container');
-    //     var inputs = container.getElementsByTagName('input');
+    // Sự kiện khi nhấn vào nút "-" để xóa ô input cuối cùng
+    document.getElementById('remove-image').addEventListener('click', function () {
+        var container = document.getElementById('image-container');
+        var inputs = container.getElementsByTagName('input');
 
-    //     // Chỉ xóa nếu còn nhiều hơn 1 input
-    //     if (inputs.length > 1) {
-    //         container.removeChild(inputs[inputs.length - 1]);
-    //     }
-    // });
+            // Chỉ xóa nếu còn nhiều hơn 1 input
+        if (inputs.length > 1) {
+            container.removeChild(inputs[inputs.length - 1]);
+        }
+    });
 
-    // function displayFileInfo() {
-    //     const input = document.getElementById('fileInput');
-    //     const file = input.files[0]; // Lấy file đầu tiên (vì người dùng có thể chọn nhiều file)
-    //     if (file) {
-    //         // Kiểm tra kích thước file (ví dụ 1GB = 1073741824 bytes)
-    //         if (file.size > 1073741824) {
-    //             alert('File quá lớn, hãy chọn file dưới 1 GB.');
-    //             return;
-    //         }
+    function displayFileInfo() {
+        const input = document.getElementById('fileInput');
+        const file = input.files[0]; // Lấy file đầu tiên (vì người dùng có thể chọn nhiều file)
+        if (file) {
+                // Kiểm tra kích thước file (ví dụ 1GB = 1073741824 bytes)
+            if (file.size > 1073741824) {
+                alert('File quá lớn, hãy chọn file dưới 1 GB.');
+                return;
+            }
 
-    //         // Hiển thị thông tin file
-    //         const fileInfo = `
-    //                             <strong>File Name:</strong> ${file.name} <br>
-    //                             <strong>File Size:</strong> ${(file.size / 1024 / 1024).toFixed(2)} MB <br>
-    //                             <strong>File Type:</strong> ${file.type}
-    //                             <div class="m-2">
-    //                                 <label class="p-2 border border-1">
-    //                                     <input type="radio" value="Windows" name="Platforms" /> Windows
-    //                                 </label>
-    //                                 <label class="p-2 border border-1">
-    //                                     <input type="radio" value="MacOS" name="Platforms" /> MacOS
-    //                                 </label>
-    //                                 <label class="p-2 border border-1">
-    //                                     <input type="radio" value="Linux" name="Platforms" /> Linux
-    //                                 </label>
-    //                             </div>
-    //                         `;
-    //         document.getElementById('fileInfo').innerHTML = fileInfo;
-    //     }
-    // }
+            // Hiển thị thông tin file
+            const fileInfo = `
+                                        <strong>File Name:</strong> ${file.name} <br>
+                                        <strong>File Size:</strong> ${(file.size / 1024 / 1024).toFixed(2)} MB <br>
+                                        <strong>File Type:</strong> ${file.type}
+                                        <div class="m-2">
+                                            <label class="p-2 border border-1">
+                                                <input type="radio" value="Windows" name="Platforms" /> Windows
+                                            </label>
+                                            <label class="p-2 border border-1">
+                                                <input type="radio" value="MacOS" name="Platforms" /> MacOS
+                                            </label>
+                                            <label class="p-2 border border-1">
+                                                <input type="radio" value="Linux" name="Platforms" /> Linux
+                                            </label>
+                                            </div>
+                                    `;
+            document.getElementById('fileInfo').innerHTML = fileInfo;
+        }
+    }
 
-    // // Sự kiện khi người dùng chọn tệp mới
-    // document.getElementById('coverImageInput').addEventListener('change', function(event) {
-    //     const file = event.target.files[0];
-    //     if (file) {
-    //         const reader = new FileReader();
-    //         reader.onload = function(e) {
-    //             // Thay đổi src của hình ảnh để hiển thị ảnh đã chọn
-    //             document.getElementById('coverImagePreview').src = e.target.result;
-    //         }
-    //         reader.readAsDataURL(file); // Đọc file ảnh dưới dạng URL
-    //     }
-    // });
+    // Sự kiện khi người dùng chọn tệp mới
+    document.getElementById('coverImageInput').addEventListener('change', function (event) {
+        const file = event.target.files[0];
+        if (file) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                // Thay đổi src của hình ảnh để hiển thị ảnh đã chọn
+                    document.getElementById('coverImagePreview').src = e.target.result;
+                }
+                reader.readAsDataURL(file); // Đọc file ảnh dưới dạng URL
+            }
+        });
 </script>
-
 @section Scripts {
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Đảm bảo jQuery đã được tải -->
+
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+
 }
