--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -15,7 +15,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <style>
+        .stat-card {
+            height: 200px; /* Giảm chiều cao thẻ chứa */
+        }
 
+            .stat-card h3 {
+                font-size: 1.5rem; /* Giảm kích thước chữ của số liệu */
+            }
+
+        canvas {
+            max-width: 100%;
+            max-height: 150px; /* Giảm chiều cao biểu đồ */
+        }
+    </style>
 </head>
 <body style="background-color: #F8F8F8;">
     <!-- Navbar -->
@@ -258,7 +271,7 @@
     </script>
 
 
-
+   
 
 </body>
 </html>
