--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -226,6 +226,7 @@
                 <h1 class="fw-bold">@product.Name</h1>
                 <p>by @product.Platform</p>
 
+                //Pay
                 <div class="product-price-container">
                     <div class="discount-section">
                         <span class="discount-rate">-50%</span>
@@ -236,6 +237,16 @@
                     </div>
                     <a href="#" class="btn btn-success align-content-center w-25 fw-bold">Add To Cart</a>
                 </div>
+
+                //Free
+                @* <div class="product-price-container">
+                    <div class="discount-section">
+                        <div class="price-section">
+                            <span class="discounted-price">Free</span>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn-success align-content-center w-25 fw-bold">Play</a>
+                </div> *@
 
 
                 <p class="mt-3">Click download now to get access to the following files:</p>
